--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./server/server.js",
   "scripts": {
     "serve": "webpack-dev-server --mode=development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*_spec.js --require test/spec_helper.js --recursive --exit"
   },
   "repository": {
     "type": "git",
