--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.0.0",
     "react-map-gl": "^5.2.7",
+    "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "yup": "^0.29.1"
   },
