--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^6.0.0",
     "react-map-gl": "^5.2.7",
     "react-ratings-declarative": "^3.4.1",
