--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/alibhimani21/project-3#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-regular-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@hookform/resolvers": "0.0.5",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
@@ -31,7 +35,6 @@
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^6.0.0",
     "react-map-gl": "^5.2.7",
     "react-ratings-declarative": "^3.4.1",
