--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-map-gl": "^5.2.7",
     "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
+    "react-tabs": "^3.1.1",
     "yup": "^0.29.1"
   },
   "devDependencies": {
