--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-oauth": "^1.0.0",
     "react-hook-form": "^6.0.0",
     "react-map-gl": "^5.2.7",
     "react-ratings-declarative": "^3.4.1",
