--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.20",
     "mongoose-hidden": "^1.9.0",
+    "mongoose-paginate-v2": "^1.3.9",
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
