--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.0",
     "boundingbox": "^1.2.3",
     "bulma": "^0.9.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
@@ -51,9 +52,11 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "css-loader": "^3.6.0",
+    "dotenv-webpack": "^1.8.0",
     "file-loader": "^6.0.0",
     "formik": "^2.1.4",
     "html-webpack-plugin": "^4.3.0",
