--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-ratings-declarative": "^3.4.1",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
+    "react-status-alert": "^1.0.1",
     "react-tabs": "^3.1.1",
     "yup": "^0.29.1"
   },
