--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bulma": "^0.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "html-to-react": "^1.4.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.20",
