--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "mongoose-unique-validator": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.1.0",
     "react-google-oauth": "^1.0.0",
     "react-hook-form": "^6.0.0",
     "react-map-gl": "^5.2.7",
     "react-ratings-declarative": "^3.4.1",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
     "react-status-alert": "^1.0.1",
     "react-tabs": "^3.1.1",
     "yup": "^0.29.1"
